# llm_server.dart

./: .gitignore  README.md  ffigen.yaml  generate_hpp.sh  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/hu/boapps/llm_server_dart/llm_server_dart_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: llm_server_dart.podspec
ios/Classes/: llm_server_dart.c
lib/: llm_server_dart.dart  llm_server_dart_bindings_generated.dart
linux/: CMakeLists.txt
macos/: llm_server_dart.podspec
src/: CMakeLists.txt  generate_hpp.sh  llm_server_dart.c  llm_server_dart.h
src/llama.cpp/: .gitignore
windows/: CMakeLists.txt
